--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: objective-c
+osx_image: xcode7.3
 
 script:
-- set -o pipefail && xctool test -workspace Example/SnowFallView.xcworkspace -scheme SnowFallView-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+- set -o pipefail && xctool test -workspace Example/SnowFallViewExample.xcworkspace -scheme SnowFallViewExample -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 - pod lib lint
